--- a/src/SecondChance.Api/appsettings.Production.json
+++ b/src/SecondChance.Api/appsettings.Production.json
@@ -4,8 +4,16 @@
   },
   "JwtConfig": {
     "Key": "",
+    "Issuer": "",
+    "Audience": "",
     "AccessTokenExpirationMilliseconds": 86400000,
     "RefreshTokenExpirationMilliseconds": 604800000
+  },
+  "SystemUser": {
+    "UserName": "",
+    "Email": "",
+    "Role": "",
+    "Password": ""
   },
   "RequestConfig": {
     "Cors": [
