--- a/src/SecondChance.Infrastructure/SecondChance.Infrastructure.csproj
+++ b/src/SecondChance.Infrastructure/SecondChance.Infrastructure.csproj
@@ -38,4 +38,8 @@
         <ProjectReference Include="..\SecondChance.Application\SecondChance.Application.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Persistence\Migrations\" />
+    </ItemGroup>
+
 </Project>
