--- a/src/SecondChance.Api/Properties/launchSettings.json
+++ b/src/SecondChance.Api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "applicationUrl": "http://localhost:5051",
       "environmentVariables": {
         "SECOND_CHANCE_ENVIRONMENT": "Development",
-        "SECOND_CHANCE_USE_SECRETS": "UseSecrets"
+        "SECOND_CHANCE_USE_SECRETS": "Use"
       }
     },
     "https": {
@@ -28,7 +28,7 @@
       "applicationUrl": "https://localhost:7245;http://localhost:5051",
       "environmentVariables": {
         "SECOND_CHANCE_ENVIRONMENT": "Development",
-        "SECOND_CHANCE_USE_SECRETS": "UseSecrets"
+        "SECOND_CHANCE_USE_SECRETS": "Use"
       }
     },
     "IIS Express": {
@@ -37,7 +37,7 @@
       "launchUrl": "scalar/v1",
       "environmentVariables": {
         "SECOND_CHANCE_ENVIRONMENT": "Development",
-        "SECOND_CHANCE_USE_SECRETS": "UseSecrets"
+        "SECOND_CHANCE_USE_SECRETS": "Use"
       }
     }
   }
