--- a/src/SecondChance.Api/appsettings.Development.json
+++ b/src/SecondChance.Api/appsettings.Development.json
@@ -21,5 +21,12 @@
       "http://localhost:5065",
       "https://localhost:7289"
     ]
+  },
+  "Logger": {
+    "ConsoleLogLevel": "Debug",
+    "ConsoleMessageTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [Thread:{ThreadId}/Task:{TaskId}] {SourceContext}: {Message:lj}{NewLine}{Exception}",
+    "FileLogLevel": "Warning",
+    "FileName": "logs.txt",
+    "FileFolderPath": "Root/Errors"
   }
 }
